--- a/header.html
+++ b/header.html
@@ -8,12 +8,12 @@
       <span class="icon-bar"></span>
     </button>
 
-      <div class="collapse navbar-collapse navHeaderCollapse">
+      <div ng-if="location.path() != '/register'" class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
               <li ng-class="{ active: isActive('/export')}"><a href="#!/export"><i class="glyphicon glyphicon-user"></i> Username</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
-              <li ng-class="{ active: isActive('/')}"><a href="#">Request</a></li>
+              <li ng-class="{ active: isActive('/request')}"><a href="#">Request</a></li>
               <li ng-class="{ active: isActive('/result')}"><a href="#!/result">Result</a></li>
               <li ng-class="{ active: isActive('/export')}"><a href="#!/export">Export</a></li>
         </ul>
