--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app" ng-controller="loginController" ng-init="checkPage()">
 <head>
 
   <meta charset="utf-8"/>
@@ -12,12 +12,13 @@
   <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/request.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/login.css"/>
 
 </head>
 
-<body ng-app="app">
+<body>
 
-  <header id="menu-bar" ng-include="'header.html'"></header>
+  <header id="menu-bar" ng-include="'header.html'" ng-if="location.path() != '/'"></header>
   <main ui-view></main>
 
   <!-- Angular Material requires Angular.js Libraries -->
