--- a/header.html
+++ b/header.html
@@ -13,9 +13,9 @@
               <li ng-class="{ active: isActive('/export')}"><a href="#!/export"><i class="glyphicon glyphicon-user"></i> Username</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
-              <li ng-class="{ active: isActive('/request')}"><a href="#">Request</a></li>
-              <li ng-class="{ active: isActive('/result')}"><a href="#!/result">Result</a></li>
-              <li ng-class="{ active: isActive('/export')}"><a href="#!/export">Export</a></li>
+              <li ng-class="{ active: isActive('/request')}"><a href="#/request">Request</a></li>
+              <li ng-class="{ active: isActive('/result')}"><a href="#/result">Result</a></li>
+              <li ng-class="{ active: isActive('/export')}"><a href="#/export">Export</a></li>
         </ul>
       </div>
   </div>
