--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/request.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/login.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/register.css"/>
 
 </head>
 
