--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-static-top">
   <div class="constainer">
-    <div ng-class="{ active: isActive('/')}" class="current-menu-item navbar-brand"><a href="#!/">Logo</a></div>
+    <div ng-class="{ active: isActive('/')}" class="current-menu-item navbar-brand"><a href="#/">Logo</a></div>
 
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
@@ -10,7 +10,9 @@
 
       <div ng-if="location.path() != '/register'" class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
-              <li ng-class="{ active: isActive('/export')}"><a href="#!/export"><i class="glyphicon glyphicon-user"></i> Username</a></li>
+              <li ng-class="{ active: isActive('/')}"><a href="#/">
+					<i class="glyphicon glyphicon-user"></i> Username</a>
+			  </li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
               <li ng-class="{ active: isActive('/request')}"><a href="#/request">Request</a></li>
