--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="baseUrl" content="http://localhost:8888/takeDayOff/">
   <title>Web Take Day Off</title>
 
   <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
@@ -32,7 +33,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/controller/requestCtrl.js"></script>
+  <script type="text/javascript" src="js/indexService.js"></script>
 
 </body>
 </html>
