--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="baseUrl" content="http://localhost:8888/takeDayOff/">
+  <meta name="baseUrl" content="http://localhost/WebTakeDayOff/">
   <title>Web Take Day Off</title>
 
   <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
