--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-default navbar-static-top" ng-controller="loginController">
   <div class="constainer">
-    <div ng-class="{ active: isActive('/')}" class="current-menu-item navbar-brand"><a href="#/">Logo</a></div>
+    <div ng-class="{ active: isActive('/')}" class="current-menu-item navbar-brand">Logo</div>
 
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
@@ -10,14 +10,19 @@
 
       <div ng-if="location.path() != '/register'" class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
-              <li ng-class="{ active: isActive('/')}"><a href="#/">
-					<i class="glyphicon glyphicon-user"></i> Username</a>
-			  </li>
+            <li ng-class="{ active: isActive('/')}">
+					      <i class="glyphicon glyphicon-user"></i> {{name}}
+			      </li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right: 50px">
-              <li ng-class="{ active: isActive('/request')}"><a href="#/request">Request</a></li>
-              <li ng-class="{ active: isActive('/result')}"><a href="#/result">Result</a></li>
+              <li ng-if="positionCheck==2" ng-class="{ active: isActive('/request')}"><a href="#/request">Request</a></li>
+              <li ng-if="positionCheck!=3" ng-class="{ active: isActive('/viewrequest')}"><a href="#/viewrequest">View Day Off Request</a></li>
+              <li ng-if="positionCheck!=1" ng-class="{ active: isActive('/result')}"><a href="#/result">Result</a></li>
+              <li ng-if="positionCheck==2" ng-class="{ active: isActive('/modmem')}"><a href="#/modmem">Modify Member</a></li>
+              <li ng-if="positionCheck==2" ng-class="{ active: isActive('/modpro')}"><a href="#/modpro">Modify Project</a></li>
+              <li ng-if="positionCheck==2" ng-class="{ active: isActive('/addpro')}"><a href="#/addpro">Add Project</a></li>
               <li ng-class="{ active: isActive('/export')}"><a href="#/export">Export</a></li>
+              <li ng-class="{ active: isActive('/logout')}" ng-click="logout()"><a href="#/logout">Logout</a></li>
         </ul>
       </div>
   </div>
