--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/request.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/login.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/register.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/addproject.css"/>
 
 </head>
 
