--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/login.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/register.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/addproject.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/modifymem.css"/>
 
 </head>
 
